# PolymarketTool

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.bat
data/: config.py
db/: database.py  database_protocol.py  factory.py  models.py  schemas.py  users.py
db/sqlalchemy/: crud.py  models.py  session.py
db/sqlite/: crud.py  manager.py  schemas.py  users.py
migration/: env.py
migration/versions/: 75c04068ee7c_init.py
src/bot/: PolyBot.py  cfg.py  init_bot.py  monitoring.py  states.py
src/bot/handlers/: __init__.py  charts.py  copy_trade.py  leaderboard.py  positions.py  start.py
src/bot/keyboards/: __init__.py  inline.py
src/bot/utils/: __init__.py  monitoring.py
src/core/: PolyCharts.py  PolyClient.py  PolyCopy.py  PolyScrapper.py
src/models/: datacreator.py  position.py  settings.py
utils/: check_version.py  customprint.py  decorator.py  formatters.py
