[project]
name = "polymarkettool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.22.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "bitarray==3.8.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "ckzg==2.1.5",
    "colorama==0.4.6",
    "cytoolz==1.1.0",
    "eth-abi==5.2.0",
    "eth-account==0.13.7",
    "eth-hash==0.7.1",
    "eth-keyfile==0.8.1",
    "eth-keys==0.7.0",
    "eth-rlp==2.2.0",
    "eth-typing==5.2.1",
    "eth-utils==5.3.1",
    "fake-useragent==2.2.0",
    "frozenlist==1.8.0",
    "hexbytes==1.3.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "magic-filter==1.0.12",
    "markdown-it-py==4.0.0",
    "matplotlib>=3.10.7",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "packaging==25.0",
    "pandas>=2.3.3",
    "parsimonious==0.10.0",
    "pip==24.0",
    "pluggy==1.6.0",
    "poly-eip712-structs==0.0.1",
    "propcache==0.4.1",
    "py-builder-signing-sdk==0.0.2",
    "py-clob-client==0.28.0",
    "py-order-utils==0.3.2",
    "pycryptodome==3.23.0",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pytest==9.0.1",
    "python-dotenv==1.2.1",
    "pyyaml>=6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "rlp==4.1.0",
    "setuptools==65.5.0",
    "toolz==1.1.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "yarl==1.22.0",
]
